--- a/deployment/uwsgi.ini
+++ b/deployment/uwsgi.ini
@@ -3,7 +3,7 @@ chdir = /app
 chdir2 = /app
 master = true
 
-module = src.decision-support-system
+module = src.decision_support_system
 callable = app
 buffer-size = 65535
 lazy = true
