--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -18,8 +18,8 @@ http {
     uwsgi_temp_path /spool/nginx/uwsgi_temp 1 2;
 
     server {
-        listen 8080;
-        server_name localhost;
+        listen ${NGINX_PORT};
+        server_name ${NGINX_HOST};
 
         access_log /var/log/nginx/access.log;
 
